--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ jdk: oraclejdk8
 script:
   - ./gradlew build
   - ./gradlew build jacocoTestReport
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
