--- a/build.gradle
+++ b/build.gradle
@@ -47,3 +47,10 @@ test {
         events "passed", "skipped", "failed"
     }
 }
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+}
